server/.happypack/s--423582870
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Tools/parts/Turn.js: Unexpected token (8:4)

[0m [90m  6 | [39m    [36mfor[39m(let block [36min[39m cont[33m.[39mblocks){
 [90m  7 | [39m        [36mif[39m(substr())
[31m[1m>[22m[39m[90m  8 | [39m    }
 [90m    | [39m    [31m[1m^[22m[39m
 [90m  9 | [39m    [36mreturn[39m(
 [90m 10 | [39m        [33m<[39m[33mdiv[39m className[33m=[39m[32m"contentTool"[39m[33m>[39m
 [90m 11 | [39m            [33m<[39m[33mdiv[39m[33m>[39m[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Tools/parts/Turn.js: Unexpected token (8:4)

[0m [90m  6 | [39m    [36mfor[39m(let block [36min[39m cont[33m.[39mblocks){
 [90m  7 | [39m        [36mif[39m(substr())
[31m[1m>[22m[39m[90m  8 | [39m    }
 [90m    | [39m    [31m[1m^[22m[39m
 [90m  9 | [39m    [36mreturn[39m(
 [90m 10 | [39m        [33m<[39m[33mdiv[39m className[33m=[39m[32m"contentTool"[39m[33m>[39m
 [90m 11 | [39m            [33m<[39m[33mdiv[39m[33m>[39m[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)